# studyMashinelearning

./: .gitignore  README.md  keilkill.bat
MLP识别手写数字/: CMakeLists.txt  MNISTReader.cpp  MNISTReader.h  main.cpp  matrix.h  network.cpp  network.h
机器学习/: CMakeLists.txt  MNISTReader.h  main.cpp  matrix.h  network.h
